--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,44 +1,54 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link href='http://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans:400italic,400&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+    <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+    <!-- syntax highlighting CSS -->
+    <link rel="stylesheet" href="{{site.baseurl}}/css/syntax.css">
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/normalize/2.1.3/normalize.min.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
 
-    </head>
-    <body>
+</head>
+<body>
 
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
+<div class="site">
+    <header class="header">
+        <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+        <ul class="menu">
+            <li><a class="menu__title" href="{{site.baseurl}}/">Home</a></li>
+            {% directory path:'langs' %}
+            <li class="menu__menu {{file.name}}">
+                {% assign folder = 'langs/'|append:file.name %}
+                <span class="menu__title">{{file.name}}</span>
+                <ul class="dropdown">
+                {% directory path:folder %}
+                    <li class="dropdown__item"><a href="{{site.baseurl}}/{{folder}}/{{file.slug}}.html">{{ file.slug }}</a></li>
+                {% enddirectory %}
+                </ul>
+            </li>
+            {% enddirectory %}
+        </ul>
+    </header>
 
-          {{ content }}
+    {{ content }}
 
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
-        </div>
+    <footer class="footer">
+        <span>
+            <span class="contact">Allure Framework</span>
+            <span class="contact">
+                <a href="https://github.com/allure-framework">GitHub</a>
+            </span>
+            <span class="contact"><a href="mailto:allure@yandex-team.ru">allure@yandex-team.ru</a></span>
+        </span>
+        <div class="strut"></div>
+    </footer>
+</div>
 
-    </body>
+</body>
 </html>
