--- a/css/main.css
+++ b/css/main.css
@@ -1,160 +1,154 @@
-/*****************************************************************************/
-/*
-/* Common
-/*
-/*****************************************************************************/
-
-/* Global Reset */
-* {
-  margin: 0;
-  padding: 0;
-}
-
-html, body { height: 100%; }
-
 body {
-  background-color: #FFF;
-  font: 13.34px Helvetica, Arial, sans-serif;
-  font-size: small;
-  text-align: center;
+    background-color: #FFF;
+    font: 14px normal 'Open Sans', sans-serif;
 }
-
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%; }
-
-h1 { margin-bottom: 1em; }
-p { margin: 1em 0; }
-
-a         { color: #00a; }
-a:hover   { color: #000; }
-a:visited { color: #a0a; }
-
-/*****************************************************************************/
-/*
-/* Home
-/*
-/*****************************************************************************/
-.posts {
-  list-style-type: none;
-  margin-bottom: 2em;
-}
-
-.posts li {
-  line-height: 1.75em;
-}
-
-.posts span {
-  color: #aaa;
-  font-family: Monaco, "Courier New", monospace;
-  font-size: 80%;
-}
-
-/*****************************************************************************/
-/*
-/* Site
-/*
-/*****************************************************************************/
 
 .site {
-  font-size: 115%;
-  text-align: justify;
-  width: 42em;
-  margin: 3em auto 2em;
-  line-height: 1.5em;
+    text-align: justify;
+    width: 920px;
+    margin: 0 auto 2em;
+    line-height: 1.5em;
+}
+
+a {
+    color: #a00;
+}
+
+a:hover {
+    color: #000;
+}
+
+.header {
+    clear: both;
 }
 
 .header a {
-  font-weight: bold;
-  text-decoration: none;
+    font-weight: normal;
+    text-decoration: none;
+}
+
+.title, .menu {
+    float: left;
 }
 
 .title {
-  display: inline-block;
-  margin-bottom: 2em;
+    font-family: 'Oleo Script', cursive;
+    line-height: 2em;
 }
 
-.title a {
-  color: #a00;
+.menu {
+    margin: 1.9em 0;
 }
 
-.title a:hover {
-  color: #000;
+.menu>li {
+    display: inline-block;
+    font-size: 1.2em;
 }
 
-.header a.extra {
-  color: #aaa;
-  margin-left: 1em;
+.menu__menu {
+    display: inline-block;
+    position: relative;
+    text-transform: capitalize;
+    border-bottom: 4px solid transparent;
 }
 
-.header a.extra:hover {
-  color: #000;
+.menu__title {
+    display: inline-block;
+    min-width: 110px;
+    padding: 0.5em 1.5em;
+    text-align: center;
+    overflow: hidden;
 }
 
-.meta {
-  color: #aaa;
+.menu__menu>.dropdown {
+    display: none;
+    position: absolute;
+    top: 110%;
+    left: 0;
+    width: 100%;
+    padding: 0;
+    background: #fff;
+    list-style: none;
+    box-shadow: 1px 1px 4px #888;
+}
+
+.menu__menu:hover>.dropdown {
+    display: block;
+}
+
+.dropdown__item>a {
+    padding: 0.5em 1.5em;
+    text-align: center;
+    display: block;
+}
+
+.menu__menu:hover, .menu__title:hover, .dropdown__item>a:hover {
+    background-color: #eee;
+}
+
+.java {
+    border-color: #b07219;
+}
+
+.javascript {
+    border-color: #f15501;
+}
+
+.python {
+    border-color: #3581ba;
 }
 
 .footer {
-  font-size: 80%;
-  color: #666;
-  border-top: 4px solid #eee;
-  margin-top: 2em;
-  overflow: hidden;
+    color: #666;
+    border-top: 4px solid #eee;
+    margin-top: 2em;
+    padding: 2em 0;
+    overflow: hidden;
+    text-align: justify;
+}
+
+.footer .strut {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    height: 0;
 }
 
 .footer .contact {
-  float: left;
-  margin-right: 3em;
+    display: inline-block;
 }
 
 .footer .contact a {
-  color: #8085C1;
+    color: #8085C1;
 }
 
-.footer .rss {
-  margin-top: 1.1em;
-  margin-right: -.2em;
-  float: right;
+.page pre {
+    border: 1px solid #ddd;
+    background-color: #eef;
+    padding: 0 .4em;
 }
 
-.footer .rss img {
-  border: 0;
+.page ul, .page ol {
+    margin-left: 1.35em;
 }
 
-/*****************************************************************************/
-/*
-/* Posts
-/*
-/*****************************************************************************/
-
-/* standard */
-.post pre {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .4em;
+.page code {
+    border: 1px solid #ddd;
+    background-color: #eef;
+    padding: 0 .2em;
 }
 
-.post ul, .post ol {
-  margin-left: 1.35em;
-}
-
-.post code {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .2em;
-}
-
-.post pre code {
-  border: none;
+.page pre code {
+    border: none;
 }
 
 /* terminal */
-.post pre.terminal {
-  border: 1px solid #000;
-  background-color: #333;
-  color: #FFF;
+.page pre.terminal {
+    border: 1px solid #000;
+    background-color: #333;
+    color: #FFF;
 }
 
-.post pre.terminal code {
-  background-color: #333;
+.page pre.terminal code {
+    background-color: #333;
 }
