--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,13 @@
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width">
 
-    <!-- syntax highlighting CSS -->
+    <link  href="//yandex.st/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
+    <link  href="//fotorama.s3.amazonaws.com/4.4.8/fotorama.css" rel="stylesheet">
     <link rel="stylesheet" href="{{site.baseurl}}/css/syntax.css">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/normalize/2.1.3/normalize.min.css">
     <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
 
+    <script src="//yandex.st/jquery/2.0.3/jquery.min.js"></script>
+    <script src="//fotorama.s3.amazonaws.com/4.4.8/fotorama.js"></script>
 </head>
 <body>
 
@@ -35,9 +35,7 @@
             {% enddirectory %}
         </ul>
     </header>
-
-    {{ content }}
-
+    <div class="content">{{ content }}</div>
     <footer class="footer">
         <span>
             <span class="contact">Allure Framework</span>
