--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
 </head>
 <body>
 
-<div class="site">
-    <header class="header">
+<header class="header">
+    <div class="container">
         <h1 class="title"><a href="/">{{ site.name }}</a></h1>
         <ul class="menu">
             <li><a class="menu__title" href="{{site.baseurl}}/">Home</a></li>
@@ -34,9 +34,11 @@
             </li>
             {% enddirectory %}
         </ul>
-    </header>
-    <div class="content">{{ content }}</div>
-    <footer class="footer">
+    </div>
+</header>
+{{ content }}
+<footer class="footer">
+    <div class="container">
         <span>
             <span class="contact">Allure Framework</span>
             <span class="contact">
@@ -45,8 +47,8 @@
             <span class="contact"><a href="mailto:allure@yandex-team.ru">allure@yandex-team.ru</a></span>
         </span>
         <div class="strut"></div>
-    </footer>
-</div>
+    </div>
+</footer>
 
 </body>
 </html>
