add qatools link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,9 @@
             </li>
             {% enddirectory %}
         </ul>
+        <div class="pull-right">
+            <a class="qatools" href="http://qatools.ru"></a>
+        </div>
     </div>
 </header>
 {{ content }}
