--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link href='http://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans:400italic,400&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Exo+2:700|Open+Sans:400italic,400&subset=latin,cyrillic" rel="stylesheet" type="text/css">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width">
 
@@ -22,7 +22,7 @@
     <div class="container">
         <h1 class="title"><a href="/{{lang_prefix}}">{{ site.name }}</a></h1>
         <ul class="menu">
-            <li><a class="menu__title" href="{{site.baseurl}}/{{lang_prefix}}">Home</a></li>
+            <li><a class="menu__title" href="{{site.baseurl}}/{{lang_prefix}}">{{site.localization|map:lang|map:'home'}}</a></li>
             {% assign folder=lang_prefix|append:'langs' %}
             {% directory path:folder %}
             <li class="menu__menu {{file.name}}">
