--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -23,9 +23,9 @@ title: Allure self-documented tests
             <div class="col-md-3 informers">
                 <h4>Versions</h4>
 
-                <p><b>Stable:</b> 1.2.4</p>
+                <p><b>Stable:</b> 1.3.0</p>
 
-                <p><b>Development:</b> 1.3.0.RC1</p>
+                <p><b>Development:</b> 1.3.1-SNAPSHOT</p>
                 <hr>
                 <div class="informers__line">
                     <a class="btn-group teamcity"
